# Skyforge

./: .gitignore
src/external_torque_controller/: CMakeLists.txt  external_torque_controller.xml  package.xml
src/external_torque_controller/include/external_torque_controller/: external_torque_controller.hpp
src/external_torque_controller/src/: external_torque_controller.cpp
src/joint_state_plotter/: package.xml  setup.cfg  setup.py
src/joint_state_plotter/joint_state_plotter/: joint_state_plotter.py
src/joint_state_plotter/launch/: joint_plotter.launch.py
src/lqr_arm_controller/: CMakeLists.txt  lqr_arm_controller.xml  package.xml
src/lqr_arm_controller/include/lqr_arm_controller/: lqr_arm_controller.hpp
src/lqr_arm_controller/resources/: lqr_arm_controller_plugins.xml
src/lqr_arm_controller/src/: lqr_arm_controller.cpp
src/serial_bridge/: package.xml  setup.py
src/serial_bridge/launch/: serial_bridge.launch.py
src/serial_bridge/serial_bridge/: bridge_node.py
src/skyforge_bringup/: CMakeLists.txt  package.xml
src/skyforge_bringup/launch/: skyforge.launch.xml
src/skyforge_controllers/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/skyforge_controllers/config/: three_link_arm_controllers.yaml
src/skyforge_controllers/launch/: controllers.launch.py
src/skyforge_controllers/skyforge_controllers/: base_oscillating_trajectory_publisher.py  base_stepping_trajectory_publisher.py  base_trajectory_publisher.py  base_velocity_publisher.py  three_link_trajectory_publisher.py
src/skyforge_description/: package.xml  setup.cfg  setup.py
src/skyforge_description/launch/: robotmodel.launch.py
src/skyforge_description/meshes/: Base_link.stl  Section_2.stl  Section_3.stl  Section_4.stl
src/skyforge_description/urdf/: skyforge.urdf  skyforge.urdf.xacro
src/skyforge_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/skyforge_gazebo/launch/: gazebo.launch.py
src/skyforge_gazebo/worlds/: empty_no_gravity.sdf
src/skyforge_gazebo_new/: package.xml  setup.cfg  setup.py
src/skyforge_gazebo_new/launch/: newgazebo.launch.py
